[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transaction-fraud-detection-ml"
version = "0.1.0"
description = "Transaction Pattern Analysis & Fraud Flagging"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.4.0",
  "matplotlib>=3.8.0",
  "seaborn>=0.13.0",
  "jupyter>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "black>=24.3.0",
  "isort>=5.13.0",
  "mypy>=1.8.0"
]

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-dir]
"src" = "src"


